<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B1AAA1"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/cat_image3"
        android:layout_width="209dp"
        android:layout_height="137dp"
        android:layout_marginStart="202dp"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="205dp"
        android:contentDescription="@string/uncomprehending_cat"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cat_image2"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/kot2"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/cat_image4"
        android:layout_width="189dp"
        android:layout_height="189dp"
        android:layout_marginTop="197dp"
        android:layout_marginEnd="222dp"
        android:contentDescription="@string/crying_cat"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cat_image2"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/kot4"
        tools:ignore="ImageContrastCheck"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/cat_image1"
        android:layout_width="220dp"
        android:layout_height="205dp"
        android:contentDescription="@string/displeased_cat"
        app:layout_constraintBottom_toTopOf="@+id/cat_image2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kot3"
        tools:ignore="ImageContrastCheck"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/cat_image2"
        android:layout_width="205dp"
        android:layout_height="125dp"
        android:contentDescription="@string/the_suspicious_cat"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/cat_image3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cat_image1"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/kot1"
        tools:ignore="ImageContrastCheck"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/it_was_you_text"
        android:layout_width="167dp"
        android:layout_height="40dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="70dp"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/it_was_you"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/cat_image3"
        app:layout_constraintEnd_toEndOf="@id/cat_image1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cat_image2"
        app:layout_constraintTop_toBottomOf="@+id/sniff_text"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextSizeCheck"
        tools:text="Это точно были вы!!!"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/sniff_text"
        android:layout_width="91dp"
        android:layout_height="42dp"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/sniff_snifff"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toEndOf="@+id/cat_image2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338"
        tools:ignore="TextSizeCheck"
        tools:text="*нюх нюх*"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/was_it_you_text"
        android:layout_width="151dp"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="92dp"
        android:background="#000000"
        android:contentDescription="@string/was_it_you"
        android:gravity="center"
        android:text="@string/was_it_you"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/cat_image2"
        app:layout_constraintEnd_toStartOf="@+id/cat_image1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck"
        tools:text="Это вы украли рыбов?"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="202dp" />

    <TextView
        android:id="@+id/sorry_text"
        android:layout_width="146dp"
        android:layout_height="55dp"
        android:layout_marginTop="97dp"
        android:layout_marginBottom="50dp"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/sorry_i_dont_know"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/cat_image4"
        app:layout_constraintEnd_toStartOf="@+id/cat_image3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cat_image2"
        tools:ignore="TextSizeCheck"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/where_fish_text"
        android:layout_width="152dp"
        android:layout_height="52dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="82dp"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/super_where_fish"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cat_image4"
        app:layout_constraintTop_toBottomOf="@+id/cat_image3"
        tools:ignore="TextSizeCheck"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/next_button"
        android:layout_width="76dp"
        android:layout_height="63dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:baselineAlignBottom="false"
        android:clickable="false"
        android:contentDescription="@string/showing_images_button"
        android:paddingStart="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cat_image4"
        app:layout_constraintTop_toBottomOf="@+id/where_fish_text"
        app:srcCompat="@android:drawable/ic_media_play"
        tools:ignore="RtlSymmetry,ImageContrastCheck" />

    <ImageView
        android:id="@+id/about_button"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/about_text"
        app:layout_constraintBottom_toTopOf="@+id/was_it_you_text"
        app:layout_constraintEnd_toStartOf="@+id/cat_image1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_dialog_info"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>